gcc/testsuite/rust/rustc/ui/impl-trait/no-trait.rs
fn f() -> impl 'static {} // { dg-error "" "" { target *-*-* } }

fn main() {}

